--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ Pillow>=10.0.0
 
 # Fast numerical operations for pixel array processing
 numpy>=1.24.0
+
+# Colorized terminal output and progress bars
+rich>=13.0.0
