--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,9 @@ trimesh>=4.0.0
 
 # Optional: Advanced mesh repair (if needed)
 # pymesh2  # Uncomment if aggressive mesh repair is required
+
+# Needed to talk to Bambu Lab printers
+requests>=2.25.0
+
+# Environment variable management
+python-dotenv>=0.19.0
